--- a/app/views/books/list.html.erb
+++ b/app/views/books/list.html.erb
@@ -39,7 +39,7 @@ table
       <% if book_review.present? %>
         <%= book_review.average("stars") %>
         <% else %>
-        No ratings yet.
+        No User Ratings
       <% end %>
     </td>
   </tr>
