--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,7 @@
 
 <h1><%= book["title"] %></h1>
 
-<h2>by <%= author["name"] %></h2>
+<h3> <%= author["name"] %></h3>
 
 <p>Price: $<%= book["price"] %><p>
 
